--- a/kubernetes/main/flux/repos/authentik-charts.yaml
+++ b/kubernetes/main/flux/repos/authentik-charts.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: authentik-charts
+  namespace: flux-system
 spec:
   interval: 30m
   url: https://charts.goauthentik.io
