--- a/kubernetes/main/flux/repos/itzg.yaml
+++ b/kubernetes/main/flux/repos/itzg.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: itzg-charts
+  namespace: flux-system
 spec:
   interval: 2h
   url: https://itzg.github.io/minecraft-server-charts/
