--- a/kubernetes/main/flux/repos/zoriya.yaml
+++ b/kubernetes/main/flux/repos/zoriya.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: zoriya
+  namespace: flux-system
 spec:
   type: oci
   interval: 10m
