--- a/kubernetes/shared/repos/helm/backube.yaml
+++ b/kubernetes/shared/repos/helm/backube.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: backube
+  namespace: flux-system
 spec:
   interval: 1h
   url: https://backube.github.io/helm-charts/
