--- a/kubernetes/utility/flux/repos/democratic-csi.yaml
+++ b/kubernetes/utility/flux/repos/democratic-csi.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: democratic-csi
+  namespace: flux-system
 spec:
   interval: 1h
   url: https://democratic-csi.github.io/charts/
