--- a/kubernetes/main/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/main/apps/kube-tools/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../../shared/templates/flux/
+  - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./descheduler/ks.yaml
   - ./fstrim/ks.yaml
