--- a/kubernetes/main/apps/network/kustomization.yaml
+++ b/kubernetes/main/apps/network/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../../shared/templates/flux/
+  - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./cloudflared/ks.yaml
   - ./echo-server/ks.yaml
