--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../../shared/templates/flux/
+  - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
