--- a/kubernetes/utility/apps/network/kustomization.yaml
+++ b/kubernetes/utility/apps/network/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../../shared/templates/flux/
+  - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./cloudflare-ddns/ks.yaml
   - ./cloudflared/ks.yaml
