--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../../shared/templates/flux/
+  - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
