--- a/kubernetes/main/apps/actions-runner-system/namespace.yaml
+++ b/kubernetes/main/apps/actions-runner-system/namespace.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: actions-runner-system
-  labels:
+  annotations:
     kustomize.toolkit.fluxcd.io/prune: disabled
