--- a/kubernetes/main/apps/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: gha-runner-scale-set-controller
+  name: &name actions-runner-controller
 spec:
   interval: 30m
   chart:
@@ -25,4 +25,4 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    fullnameOverride: gha-runner-scale-set-controller
+    fullnameOverride: *name
