--- a/kubernetes/main/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
+++ b/kubernetes/main/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: gha-runner-scale-set
+  name: &name home-ops-runner
 spec:
   interval: 30m
   chart:
@@ -14,8 +14,6 @@ spec:
         kind: HelmRepository
         name: actions-runner-controller
         namespace: flux-system
-  driftDetection:
-    mode: enabled
   install:
     remediation:
       retries: 3
@@ -25,21 +23,21 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: gha-runner-scale-set-controller
+    - name: actions-runner-controller
       namespace: actions-runner-system
     - name: openebs
       namespace: storage
   valuesFrom:
     - targetPath: githubConfigSecret.github_token
       kind: Secret
-      name: actions-runner-controller-auth-secret
+      name: actions-runner-controller
       valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN
   values:
-    nameOverride: gha-runner-scale-set
-    runnerScaleSetName: gha-runner-scale-set
+    nameOverride: *name
+    runnerScaleSetName: *name
     githubConfigUrl: https://github.com/joryirving/home-ops
     minRunners: 1
-    maxRunners: 10
+    maxRunners: 6
     containerMode:
       type: kubernetes
       kubernetesModeWorkVolumeClaim:
@@ -48,6 +46,9 @@ spec:
         resources:
           requests:
             storage: 25Gi
+    controllerServiceAccount:
+      name: actions-runner-controller
+      namespace: actions-runner-system
     template:
       spec:
         containers:
@@ -57,6 +58,3 @@ spec:
             env:
               - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
                 value: "false"
-    controllerServiceAccount:
-      name: gha-runner-scale-set-controller
-      namespace: actions-runner-system
