--- a/kubernetes/utility/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/utility/apps/actions-runner-system/kustomization.yaml
@@ -4,10 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  - ../../../shared/templates/alerts
+  # - ./namespace.yaml
+  # # - ../../../shared/templates/alerts
   # Flux-Kustomizations
-  - ./actions-runner-controller/ks.yaml
+  # - ./actions-runner-controller/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
