--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   sync:
     name: Flux Kustomization Sync
-    runs-on: ["home-ops-runner"]
+    runs-on: self-hosted
     strategy:
       matrix:
          cluster: ["utility"]
