--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   publish:
     name: Schemas
-    runs-on: ["home-ops-runner"]
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
