--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   sync:
     name: Flux Kustomization Sync
-    runs-on: [home-ops-runner, home-ops-runner-utility]
+    runs-on: [home-ops-runner]
     strategy:
       matrix:
          cluster: ["utility"]
