--- a/kubernetes/main/bootstrap/helmfile.yaml
+++ b/kubernetes/main/bootstrap/helmfile.yaml
@@ -39,11 +39,11 @@ releases:
       - kube-system/cilium
 
   - name: spegel
-    namespace: kube-system
+    namespace: kube-tools
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.29
     values:
-      - ../apps/kube-system/spegel/app/helm-values.yaml
+      - ../apps/kube-tools/spegel/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
@@ -61,7 +61,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../appsflux-system/flux-operator/app/helm-values.yaml
+      - ../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
 
@@ -71,6 +71,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../appsflux-system/flux-operator/instance/helm-values.yaml
+      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
