--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/helmrelease.yaml
@@ -8,8 +8,8 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: tf-controller
-      version: 0.16.0-rc.4
+      chart: tofu-controller
+      version: 0.16.0-rc.5
       sourceRef:
         kind: HelmRepository
         name: tofu-controller
