--- a/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
@@ -6,6 +6,22 @@ metadata:
 spec:
   interval: 12h
   approvePlan: auto
+  backendConfig:
+    customConfiguration: |
+      backend "s3" {
+        bucket = "terraform-state"
+        key    = "minio/minio.tfstate"
+        region   = "main"
+        endpoints = {
+          s3 = "https://s3.${SECRET_DOMAIN}"
+        }
+
+        skip_credentials_validation = true
+        skip_requesting_account_id  = true
+        skip_metadata_api_check     = true
+        skip_region_validation      = true
+        use_path_style              = true
+      }
   backendConfigsFrom:
   - kind: Secret
     name: terraform-backend-secret
