--- a/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-jitter.yaml
+++ b/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-jitter.yaml
@@ -3,15 +3,17 @@
 apiVersion: admissionregistration.k8s.io/v1alpha1
 kind: MutatingAdmissionPolicyBinding
 metadata:
-  name: &name volsync-movers-add-jitter
+  name: volsync-mover-jitter
+  namespace: volsync-system
 spec:
-  policyName: *name
+  policyName: volsync-mover-jitter
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/mutatingadmissionpolicy-admissionregistration-v1alpha1.json
 apiVersion: admissionregistration.k8s.io/v1alpha1
 kind: MutatingAdmissionPolicy
 metadata:
-  name: volsync-movers-add-jitter
+  name: volsync-mover-jitter
+  namespace: volsync-system
 spec:
   matchConstraints:
     resourceRules:
@@ -21,13 +23,13 @@ spec:
         resources: ["jobs"]
   matchConditions:
     - name: has-name
-      expression: 'object.metadata.name.startsWith("volsync-src-")'
+      expression: object.metadata.name.startsWith("volsync-src-")
     - name: has-labels
-      expression: 'object.metadata.labels["app.kubernetes.io/created-by"] == "volsync"'
+      expression: object.metadata.labels["app.kubernetes.io/created-by"] == "volsync"
   failurePolicy: Fail
   reinvocationPolicy: IfNeeded
   mutations:
-    - patchType: "JSONPatch"
+    - patchType: JSONPatch
       jsonPatch:
         expression: >
           [
@@ -37,7 +39,7 @@ spec:
             },
             JSONPatch{
               op: "add", path: "/spec/template/spec/initContainers/-",
-              value: Object.spec.initContainers{
+              value: Object.spec.template.spec.initContainers{
                 name: "jitter",
                 image: "docker.io/library/busybox:latest",
                 imagePullPolicy: "IfNotPresent",
