--- a/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-nfs.yaml
+++ b/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-nfs.yaml
@@ -3,15 +3,15 @@
 apiVersion: admissionregistration.k8s.io/v1alpha1
 kind: MutatingAdmissionPolicyBinding
 metadata:
-  name: &name volsync-movers-add-jitter
+  name: volsync-mover-nfs
 spec:
-  policyName: *name
+  policyName: volsync-mover-nfs
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/mutatingadmissionpolicy-admissionregistration-v1alpha1.json
 apiVersion: admissionregistration.k8s.io/v1alpha1
 kind: MutatingAdmissionPolicy
 metadata:
-  name: volsync-movers-add-jitter
+  name: volsync-mover-nfs
 spec:
   matchConstraints:
     resourceRules:
@@ -21,27 +21,34 @@ spec:
         resources: ["jobs"]
   matchConditions:
     - name: has-name
-      expression: 'object.metadata.name.startsWith("volsync-src-")'
+      expression: object.metadata.name.startsWith("volsync-")
     - name: has-labels
-      expression: 'object.metadata.labels["app.kubernetes.io/created-by"] == "volsync"'
+      expression: object.metadata.labels["app.kubernetes.io/created-by"] == "volsync"
+    - name: volume-not-present
+      expression: >
+        !object.spec.template.spec.volumes.exists(item, item.name == "repository")
   failurePolicy: Fail
   reinvocationPolicy: IfNeeded
   mutations:
-    - patchType: "JSONPatch"
+    - patchType: JSONPatch
       jsonPatch:
         expression: >
           [
             JSONPatch{
-              op: "add", path: "/spec/template/spec/initContainers",
-              value: []
+              op: "add", path: "/spec/template/spec/containers/0/volumeMounts/-",
+              value: Object.spec.template.spec.containers.volumeMounts{
+                name: "repository",
+                mountPath: "/repository"
+              }
             },
             JSONPatch{
-              op: "add", path: "/spec/template/spec/initContainers/-",
-              value: Object.spec.initContainers{
-                name: "jitter",
-                image: "docker.io/library/busybox:latest",
-                imagePullPolicy: "IfNotPresent",
-                command: ["sh", "-c", "sleep $(shuf -i 0-60 -n 1)"]
+              op: "add", path: "/spec/template/spec/volumes/-",
+              value: Object.spec.template.spec.volumes{
+                name: "repository",
+                nfs: Object.spec.template.spec.volumes.nfs{
+                  server: "voyager.internal",
+                  path: "${SECRET_NFS_VOLSYNC}"
+                }
               }
             }
           ]
