--- a/kubernetes/shared/templates/volsync/claim.yaml
+++ b/kubernetes/shared/templates/volsync/claim.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "${VOLSYNC_CLAIM:-${APP}}"
+  name: "${CLAIM:-${APP}}"
   labels:
     app.kubernetes.io/name: "${APP}"
 spec:
