--- a/kubernetes/shared/templates/volsync/kustomization.yaml
+++ b/kubernetes/shared/templates/volsync/kustomization.yaml
@@ -4,6 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./claim.yaml
-  - ./minio.yaml
-  # - ./nfs.yaml
+  # - ./minio.yaml
+  - ./nfs.yaml
   - ./r2.yaml
