--- a/kubernetes/shared/templates/volsync/nfs.yaml
+++ b/kubernetes/shared/templates/volsync/nfs.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${APP}-volsync"
+  name: &name "${APP}-volsync"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
