--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -123,13 +123,9 @@ spec:
         # Global
         compress-type: "bz2"
         compress-level: "9"
-        # Minio
-        repo1-block: "y"
-        repo1-bundle: "y"
-        repo1-path: /crunchy-pgo
+        # PVC
         repo1-retention-full: "30" # days
         repo1-retention-full-type: "time"
-        repo1-s3-uri-style: path
         # R2
         repo2-block: "y"
         repo2-bundle: "y"
@@ -137,9 +133,13 @@ spec:
         repo2-retention-full: "7" # days
         repo2-retention-full-type: time
         repo2-s3-uri-style: path
-        # PVC
-        repo3-retention-full: "30" # days
-        repo3-retention-full-type: "time"
+        # Minio
+        # repo3-block: "y"
+        # repo3-bundle: "y"
+        # repo3-path: /crunchy-pgo
+        # repo3-retention-full: "30" # days
+        # repo3-retention-full-type: "time"
+        # repo3-s3-uri-style: path
       manual:
         repoName: repo1
         options:
@@ -149,10 +149,14 @@ spec:
           app.kubernetes.io/name: crunchy-postgres-backup
       repos:
         - name: repo1
-          s3: &minio
-            bucket: postgresql
-            endpoint: s3.jory.dev
-            region: ca-west-1
+          volume: &nfs
+            volumeClaimSpec:
+              storageClassName: nfs-slow #csi-driver-nfs
+              volumeName: postgres-nfs
+              accessModes: ["ReadWriteMany"]
+              resources:
+                requests:
+                  storage: 1Mi
           schedules:
             full: "30 1 * * 0" # Sunday at 01:30
             differential: "30 1 * * 1-6" # Mon-Sat at 01:30
@@ -165,19 +169,15 @@ spec:
           schedules:
             full: "30 2 * * 0" # Sunday at 02:30
             incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
-        - name: repo3
-          volume: &nfs
-            volumeClaimSpec:
-              storageClassName: nfs-slow #csi-driver-nfs
-              volumeName: postgres-nfs
-              accessModes: ["ReadWriteMany"]
-              resources:
-                requests:
-                  storage: 1Mi
-          schedules:
-            full: "15 1 * * 0" # Sunday at 01:15
-            differential: "15 1 * * 1-6" # Mon-Sat at 01:15
-            incremental: "15 3-23 * * *" # Every hour except 01:30-2:30
+        # - name: repo3
+        #   s3: &minio
+        #     bucket: postgresql
+        #     endpoint: s3.jory.dev
+        #     region: ca-west-1
+        #   schedules:
+        #     full: "15 1 * * 0" # Sunday at 01:15
+        #     differential: "15 1 * * 1-6" # Mon-Sat at 01:15
+        #     incremental: "15 3-23 * * *" # Every hour except 01:30-2:30
   dataSource:
     pgbackrest:
       stanza: db
@@ -185,7 +185,8 @@ spec:
       global: *backupFlag
       repo:
         name: repo1
-        s3: *minio
+        volume: *nfs
+        # s3: *r2
   proxy:
     pgBouncer:
       service:
