--- a/kubernetes/main/apps/network/internal/ks.yaml
+++ b/kubernetes/main/apps/network/internal/ks.yaml
@@ -4,7 +4,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app internal-external-dns
+  name: &app external-dns-unifi
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -26,7 +26,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app nginx-internal
+  name: &app internal-ingress-nginx
   namespace: flux-system
 spec:
   targetNamespace: network
