--- a/kubernetes/utility/apps/network/external/ks.yaml
+++ b/kubernetes/utility/apps/network/external/ks.yaml
@@ -68,7 +68,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-external-dns
+  name: &app external-dns-cloudflare
   namespace: flux-system
 spec:
   targetNamespace: network
