--- a/kubernetes/utility/apps/network/internal/external-dns/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/internal/external-dns/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name internal-external-dns
+  name: &name external-dns-unifi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
