--- a/kubernetes/utility/apps/network/internal/external-dns/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/internal/external-dns/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app internal-external-dns
+  name: &app external-dns-unifi
 spec:
   interval: 30m
   chart:
