--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
@@ -12,10 +12,11 @@ spec:
     name: *name
     template:
       data:
+        CLOUDFLARE_ACCOUNT_ID: "{{ .CLOUDFLARE_ACCOUNT_TAG }}"
         s3.conf: |
           [global]
-          repo1-s3-key={{ .AWS_ACCESS_KEY_ID }}
-          repo1-s3-key-secret={{ .AWS_SECRET_ACCESS_KEY }}
+          # repo1-s3-key={{ .AWS_ACCESS_KEY_ID }}
+          # repo1-s3-key-secret={{ .AWS_SECRET_ACCESS_KEY }}
           repo2-s3-key={{ .R2_ACCESS_KEY_ID }}
           repo2-s3-key-secret={{ .R2_SECRET_ACCESS_KEY }}
         encryption.conf: |
@@ -27,5 +28,5 @@ spec:
         key: cloudflare
     - extract:
         key: crunchy-pgo
-    - extract:
-        key: postgresql-bucket
+    # - extract:
+    #     key: postgresql-bucket
