--- a/kubernetes/main/apps/flux-system/flux-operator/instance/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/flux-operator/instance/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./github
+  - ./externalsecrets.yaml
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
 configMapGenerator:
