--- a/kubernetes/shared/settings/cluster-settings.yaml
+++ b/kubernetes/shared/settings/cluster-settings.yaml
@@ -8,3 +8,4 @@ data:
   TIMEZONE: "America/Edmonton"
   CLUSTER_CIDR: "10.42.0.0/16"
   NODE_CIDR: "10.69.1.0/24"
+  TRUSTED_CIDR: "192.168.30.0/24"
