--- a/kubernetes/utility/flux/settings/kustomization.yaml
+++ b/kubernetes/utility/flux/settings/kustomization.yaml
@@ -3,5 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cluster-secrets.sops.yaml
   - ./cluster-settings.yaml
+  - ./ks-substitution.yaml
