--- a/kubernetes/main/apps/database/crunchy-postgres/stores/clustersecretstore.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/stores/clustersecretstore.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: crunchy-pgo-secrets
+  name: crunchy-postgres
 spec:
   provider:
     kubernetes:
