--- a/kubernetes/main/apps/self-hosted/archiveteam/app/deployment.yaml
+++ b/kubernetes/main/apps/self-hosted/archiveteam/app/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: &app archiveteam
+  name: &app usgovernment-grab
   labels:
     app: *app
 spec:
