--- a/kubernetes/main/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 68.5.0
+      version: 69.1.0
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
@@ -25,13 +25,14 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: kube-prometheus-stack-crds
-      namespace: observability
     - name: rook-ceph-cluster
       namespace: rook-ceph
   values:
     crds:
-      enabled: false
+      enabled: true
+      upgradeJob:
+        enabled: true
+        forceConflicts: true
     alertmanager:
       ingress:
         enabled: true
