--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
@@ -5,7 +5,7 @@ kind: HelmRelease
 metadata:
   name: home-ops-runner
 spec:
-  interval: 1h
+  interval: 30m
   chart:
     spec:
       chart: gha-runner-scale-set
@@ -25,9 +25,13 @@ spec:
   dependsOn:
     - name: actions-runner-controller
       namespace: actions-runner-system
+  valuesFrom:
+    - targetPath: githubConfigSecret.github_token
+      kind: Secret
+      name: home-ops-runner
+      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN
   values:
     githubConfigUrl: https://github.com/joryirving/home-ops
-    githubConfigSecret: home-ops-runner
     minRunners: 1
     maxRunners: 12
     containerMode:
