--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -46,7 +46,7 @@ jobs:
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
 
       - name: Gather Images
-        uses: docker://ghcr.io/allenporter/flux-local:main@sha256:f90bdfbc7baa912e9fa3e38ae4bcafc01e521b0bd3004e3c149ebe80fa3ec541
+        docker://ghcr.io/allenporter/flux-local:v7.2.0
         with:
           args: >-
             get cluster
