--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -46,7 +46,7 @@ jobs:
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
 
       - name: Gather Images
-        docker://ghcr.io/allenporter/flux-local:v7.2.0
+        uses: docker://ghcr.io/allenporter/flux-local:v7.2.0
         with:
           args: >-
             get cluster
