--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Release"
+name: "Tag"
 
 on:
   workflow_dispatch:
@@ -8,8 +8,8 @@ on:
     - cron: "0 0 1 * *" # 1st day of every month at Midnight
 
 jobs:
-  release:
-    name: Release
+  tag:
+    name: Tag
     runs-on: ubuntu-latest
     steps:
       - name: Generate Token
@@ -19,27 +19,31 @@ jobs:
           app-id: ${{ secrets.BOT_APP_ID }}
           private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
 
-      - name: Get Previous Release Tag and Determine Next Tag
+      - name: Get Previous Tag and Determine Next Tag
         id: determine-next-tag
         uses: actions/github-script@v7
         with:
           github-token: "${{ steps.app-token.outputs.token }}"
           result-encoding: string
           script: |
-            const { data: releases } = await github.rest.repos.listReleases({
+            const { data: tags } = await github.rest.repos.listTags({
               owner: context.repo.owner,
               repo: context.repo.repo,
               per_page: 1,
             });
+
             let previousTag = "0.0.0"; // Default if no previous release exists
-            if (releases.length > 0) {
-              previousTag = releases[0].tag_name;
+            if (tags.length > 0) {
+              previousTag = tags[0].name;
             }
+
             const [previousMajor, previousMinor, previousPatch] = previousTag.split('.').map(Number);
             const currentYear = new Date().getFullYear();
             const currentMonth = new Date().getMonth() + 1; // Months are 0-indexed in JavaScript
+
             const nextMajorMinor = `${currentYear}.${currentMonth}`;
             let nextPatch;
+
             if (`${previousMajor}.${previousMinor}` === nextMajorMinor) {
               console.log("Month release already exists for the year. Incrementing patch number by 1.");
               nextPatch = previousPatch + 1;
@@ -47,11 +51,28 @@ jobs:
               console.log("Month release does not exist for the year. Starting with patch number 0.");
               nextPatch = 0;
             }
+
             return `${nextMajorMinor}.${nextPatch}`;
 
-      - name: Create Release
-        uses: ncipollo/release-action@v1
+      - name: Create Tag
+        uses: actions/github-script@v7
         with:
-          generateReleaseNotes: true
-          tag: "${{ steps.determine-next-tag.outputs.result }}"
-          token: "${{ steps.app-token.outputs.token }}"
+          github-token: "${{ steps.app-token.outputs.token }}"
+          script: |
+            const tagName = "${{ steps.determine-next-tag.outputs.result }}";
+
+            const tag = await github.rest.git.createTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: tagName,
+              message: tagName,
+              object: context.sha,
+              type: "commit"
+            })
+
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/tags/${tagName}`,
+              sha: tag.data.sha
+            })
